[Extensions Click-to-Script] Only apply behavior with the feature enabled

Ensure that click-to-script functionality is only applied if the feature
is enabled. This guarantees that users have an escape hatch.

Bug: 841465

Change-Id: Ieaf7aa19af449329f536fc46ec3b4dedf09c66b8
Reviewed-on: https://chromium-review.googlesource.com/1053049
Reviewed-by: Karan Bhatia <karandeepb@chromium.org>
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559365}
Former-commit-id: 582db61df3c481f784b77d3d429bfe51aa75883c