chrome/browser/extensions/scripting_permissions_modifier.h
@@ -31,59 +31,56 @@ class ScriptingPermissionsModifier {
                                const scoped_refptr<const Extension>& extension);
   ~ScriptingPermissionsModifier();
 
-  // Sets whether or not the extension is allowed on all urls and handles the
-  // case of the extension not being present in the registry (which can happen
-  // if we sync the data before downloading the extension). For cases other than
-  // sync, SetAllowedOnAllUrls() should be used.
-  static void SetAllowedOnAllUrlsForSync(bool allowed,
-                                         content::BrowserContext* context,
-                                         const std::string& id);
-
   // Sets whether the extension should be allowed to execute on all urls without
   // explicit user consent. Used when the features::kRuntimeHostPermissions
   // feature is enabled.
+  // This may only be called for extensions that can be affected (i.e., for
+  // which CanAffectExtension() returns true). Anything else will DCHECK.
   void SetAllowedOnAllUrls(bool allowed);
 
   // Returns whether the extension is allowed to execute scripts on all urls
   // without user consent.
-  bool IsAllowedOnAllUrls();
+  // This may only be called for extensions that can be affected (i.e., for
+  // which CanAffectExtension() returns true). Anything else will DCHECK.
+  bool IsAllowedOnAllUrls() const;
 
-  // Returns whether the user has set an explicit preference for the extension's
-  // ability to execute scripts without consent.
-  bool HasSetAllowedOnAllUrls() const;
-
-  // Returns true if the features::kRuntimeHostPermissions feature would
-  // possibly affect the given extension and |permissions|. We pass in the
-  // |permissions| explicitly, as we may need to check with permissions other
-  // than the ones that are currently on the extension's PermissionsData.
-  bool CanAffectExtension(const PermissionSet& permissions) const;
-
-  // Returns true if the extension has been affected by the
-  // features::kRuntimeHostPermissions feature.
-  bool HasAffectedExtension() const;
+  // Returns true if the associated extension can be affected by
+  // features::kRuntimeHostPermissions.
+  bool CanAffectExtension() const;
 
   // Grants the extension permission to run on the origin of |url|.
+  // This may only be called for extensions that can be affected (i.e., for
+  // which CanAffectExtension() returns true). Anything else will DCHECK.
   void GrantHostPermission(const GURL& url);
 
   // Returns true if the extension has been explicitly granted permission to run
   // on the origin of |url|.
-  bool HasGrantedHostPermission(const GURL& url);
+  // This may only be called for extensions that can be affected (i.e., for
+  // which CanAffectExtension() returns true). Anything else will DCHECK.
+  bool HasGrantedHostPermission(const GURL& url) const;
 
   // Revokes permission to run on the origin of |url|. DCHECKs if |url| has not
   // been granted.
+  // This may only be called for extensions that can be affected (i.e., for
+  // which CanAffectExtension() returns true). Anything else will DCHECK.
   void RemoveGrantedHostPermission(const GURL& url);
 
   // Takes in a set of permissions and withholds any permissions that should not
-  // be granted, populating |granted_permissions_out| with the set of all
-  // permissions that can be granted, and |withheld_permissions_out| with the
-  // set of all withheld permissions.
-  void WithholdPermissions(
+  // be granted for the given |extension|, populating |granted_permissions_out|
+  // with the set of all permissions that can be granted, and
+  // |withheld_permissions_out| with the set of all withheld permissions. Note:
+  // we pass in |permissions| explicitly here, as this is used during permission
+  // initialization, where the active permissions on the extension may not be
+  // the permissions to compare against.
+  static void WithholdPermissionsIfNecessary(
+      const Extension& extension,
+      const ExtensionPrefs& extension_prefs,
       const PermissionSet& permissions,
       std::unique_ptr<const PermissionSet>* granted_permissions_out,
       std::unique_ptr<const PermissionSet>* withheld_permissions_out);
 
   // Returns the subset of active permissions which can be withheld.
-  std::unique_ptr<const PermissionSet> GetRevokablePermissions();
+  std::unique_ptr<const PermissionSet> GetRevokablePermissions() const;
 
  private:
   // Grants any withheld all-hosts (or all-hosts-like) permissions.
@@ -91,10 +88,6 @@ class ScriptingPermissionsModifier {
 
   // Revokes any granted all-hosts (or all-hosts-like) permissions.
   void WithholdImpliedAllHosts();
-
-  // Updates extension prefs in the case of improper values being found for
-  // an extension.
-  void CleanUpPrefsIfNecessary();
 
   content::BrowserContext* browser_context_;
 
